--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   webview_flutter: ^4.7.0
   connectivity: ^3.0.6
+  provider: ^6.1.2
   
 
 dev_dependencies:
